--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,16 @@
 ---
-import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
 <Layout>
-	<Welcome />
+  <div class="content">
+  <h1>ASIANA</h1>
+    <p>
+      Den <b>8e Augusti</b> öppnar restaurang Asiana i <span class="redact">hemlig ort</span>.
+      <br />
+      Hos oss du hittar det bästa från det östasiatiska köket. Hotpot, sushi och mycket mer!
+      <br />
+      Mer information kommer närmare öppningsdatumet.
+    </p>
+  </div>
 </Layout>
