--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,1 @@
----
-import Layout from '../layouts/Layout.astro';
----
-
-<Layout>
-  <div class="content">
-  <h1>ASIANA</h1>
-    <p>
-      Den <b>8e Augusti</b> öppnar restaurang Asiana i <span class="redact">hemlig ort</span>.
-      <br />
-      Hos oss du hittar det bästa från det östasiatiska köket. Hotpot, sushi och mycket mer!
-      <br />
-      Mer information kommer närmare öppningsdatumet.
-    </p>
-  </div>
-</Layout>
+<meta http-equiv="refresh" content="0;url=/sv/" />
