--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,32 +2,37 @@
 import '../styles/main.scss'
 
 import TopBar from '../components/TopBar.astro'
+import Footer from '../components/Footer.astro'
 import { getLangFromUrl } from '../i18n/utils'
 ---
 
 <!doctype html>
 <html lang={getLangFromUrl(Astro.url)}>
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <!--link rel="icon" type="image/svg+xml" href="/favicon.svg" /-->
+    <link rel="icon" type="image/svg+xml" href="/img/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
-    <title>Asiana</title>
+    <title>Asiana - östasiatisk restaurang i Jordbro</title>
   </head>
   <body>
     <TopBar />
     <div id="content">
       <slot />
     </div>
+    <Footer />
   </body>
 </html>
 
 <style lang="scss">
+@use '../styles/defs';
+
 body {
   width: 100vw;
   min-height: 100vh;
   margin: 0;
   padding: 0;
+  background-color: defs.$background;
 }
 
 #content {
