--- a/src/components/AnchorButton.astro
+++ b/src/components/AnchorButton.astro
@@ -1,23 +1,43 @@
 ---
 interface Props {
   href: string
-  grow?: boolean
+  classes?: string | string[]
+  grow?: 'grow' | 'shrink'
+  growMobile?: 'grow' | 'shrink'
+  growDesktop?: 'grow' | 'shrink'
 }
 
 const {
   href,
-  grow = false
+  classes = [],
+  grow = null,
+  growDesktop = null,
+  growMobile = null,
+  ...rest
 } = Astro.props
 
 const isExternal = href.startsWith('https://')
+
+const growMobileClass =
+  typeof growMobile === 'string' ? `${growMobile}-mobile`
+  : typeof grow === 'string' ? `${grow}-mobile`
+  : null
+
+const growDesktopClass =
+  typeof growDesktop === 'string' ? `${growMobile}-desktop`
+  : typeof grow === 'string' ? `${grow}-desktop`
+  : null
 ---
 
 <a
   href={href}
   class:list={[
-    grow ? 'grow' : undefined,
-    isExternal ? 'external' : 'internal',
+    classes,
+    growMobileClass,
+    growDesktopClass,
+    isExternal && 'external'
   ]}
+  {...rest}
 >
   <slot />
 </a>
@@ -29,7 +49,7 @@ const isExternal = href.startsWith('https://')
 a {
   display: block;
   padding: 1rem;
-  margin: 1rem;
+  flex-basis: 0;
 
   border-radius: defs.$border-radius;
 
@@ -37,26 +57,43 @@ a {
   font-weight: bold;
   text-decoration: none;
   text-wrap: nowrap;
+  text-transform: uppercase;
 
   background-color: defs.$primary;
   color: defs.$background;
   box-shadow: defs.$shadow;
 
-  &.external {
-    background-color: defs.$green;
-    color: defs.$primary;
-
-    &:hover {
-      background-color: color.adjust(defs.$green, $lightness: +10%, $saturation: -10%)
-    }
-  }
-
   &:hover {
     background-color: defs.$highlight;
   }
 
-  &.grow {
-    flex-grow: 1
+  // &.external {
+  //   background-color: defs.$green;
+  //   color: defs.$highlight;
+  //
+  //   &:hover {
+  //     background-color: color.adjust(defs.$green, $lightness: +10%, $saturation: -10%)
+  //   }
+  // }
+
+  @include defs.mobile {
+    &.grow-mobile {
+      flex-grow: 1
+    }
+
+    &.shrink-mobile {
+      flex-shrink: 1
+    }
+  }
+
+  @include defs.desktop {
+    &.grow-desktop {
+      flex-grow: 1
+    }
+
+    &.shrink-desktop {
+      flex-shrink: 1
+    }
   }
 }
 </style>
