--- a/src/pages/[lang]/food.astro
+++ b/src/pages/[lang]/food.astro
@@ -7,6 +7,10 @@ import Section from '../../components/Section.astro'
 import { getAndRender } from '../../lib/util'
 import { useLangFromUrl } from '../../i18n/utils'
 
+import heroImage from '../../assets/pexels-mdsnmdsnmdsn-3728295-crop.jpg'
+import hotpotImage from '../../assets/pexels-huuhuynh-19775602-crop.jpg'
+import lunchImage from '../../assets/pexels-xmtnguyen-699953-crop.jpg'
+
 const t = useLangFromUrl(Astro.url)
 const hero = await getAndRender(Astro.url, 'food/hero')
 const hotpot = await getAndRender(Astro.url, 'food/hotpot')
@@ -16,7 +20,7 @@ const lunch = await getAndRender(Astro.url, 'food/lunch')
 <Layout>
   <Section
     id="hero"
-    imageSrc="/img/pexels-mdsnmdsnmdsn-3728295-crop.jpg"
+    image={heroImage}
     imageAlt="..."
   >
     <Fragment slot="head">
@@ -27,7 +31,7 @@ const lunch = await getAndRender(Astro.url, 'food/lunch')
   <Section
     id="hotpot"
     alt={true}
-    imageSrc="/img/pexels-huuhuynh-19775602-crop.jpg"
+    image={hotpotImage}
     imageAlt="..."
   >
     <Fragment slot="head">
@@ -37,7 +41,7 @@ const lunch = await getAndRender(Astro.url, 'food/lunch')
 
   <Section
     id="lunch"
-    imageSrc="/img/pexels-xmtnguyen-699953-crop.jpg"
+    image={lunchImage}
     imageAlt="..."
   >
     <Fragment slot="head">
