--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -88,7 +88,7 @@ const {
   width: 100%;
 }
 
-.alt {
+.container:nth-child(odd) {
   background-color: defs.$background;
 
   @include defs.desktop {
